# b-g431b-esc1

./: .gdbinit  Cargo.toml  memory.x  openocd.cfg  readme.md
.cargo/: config.toml
src/: main.rs  pwm.rs
