[package]
name = "b-g431b-esc1"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
version = "0.0.0"

[dependencies]
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-halt = "0.2.0"
stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal", features = ["rt", "stm32g431"] }

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
